definindo layout inicial

--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -8,23 +8,9 @@
     <span class="title-group">
         <a>
             <i class="material-icons">
-                save
+                home
             </i>
-            Adicionar
-        </a>
-
-        <a>
-            <i class="material-icons">
-                update
-            </i>
-            Atualizar
-        </a>
-
-        <a>
-            <i class="material-icons">
-                youtube_searched_for
-            </i>
-            Consultar
+            Home
         </a>
     </span>
 
