--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -1,24 +1,21 @@
 <mat-sidenav-container class="container">
     <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true" fixedTopGap="64">
         <mat-nav-list class="nav-list">
-            <a mat-list-item>
+            <a mat-list-item routerLink="/">
                 <i class="material-icons">
-                    save
+                    home
                 </i>
-                Adicionar
+                Home
             </a>
-            <a mat-list-item>
+            <a mat-list-item routerLink="/agendamentos">
                 <i class="material-icons">
-                    update
+                    content_paste
                 </i>
-                Atualizar
-            </a>
-            <a mat-list-item>
-                <i class="material-icons">
-                    youtube_searched_for
-                </i>
-                Consultar
+                Agendamento
             </a>
         </mat-nav-list>
     </mat-sidenav>
+    <mat-sidenav-content class="content">
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
 </mat-sidenav-container>
