--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -1,9 +1,5 @@
 <mat-toolbar class="footer">
     <span>
-        Desenvolvido com
-        <i class="material-icons vertical-middle">
-            favorite
-        </i>
-        por <strong>Robson</strong>
+        Desenvolvido com por <strong>Robson</strong>
     </span>
 </mat-toolbar>
